test/tests/operators/udo/args_field_default_failing/udo-args-field-default-non-null.txt
error: default value for field parameter `field` must be `null` or a selector
 --> inputs/package-roots/udo-args-field-default-failing/argspkg_field_default_failing/operators/bad_field_default.tql:7:16
  |
7 |       default: 1 + 2
  |                ^^^^^ 
  |
  = note: default value: 1 + 2
